# refinery-rs

./: .swtrc  Cargo.toml  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: refinery.yml  reusable-build.yml
ci/: action.yml
components/packaging/linux/: action.yml
components/packaging/windows/: action.yml
scripts/: package.sh  setup_tools.sh
src/: errors.rs  macros.rs  main.rs  models.rs  ui.rs  writer.rs
src/commands/: build.rs  check.rs  forge.rs  init.rs  mod.rs  release.rs  setup.rs
src/commands/core/: build.rs  mod.rs
src/commands/release/: major.rs  minor.rs  mod.rs  patch.rs  pre_release.rs
src/core/: builder.rs  mod.rs  project.rs  release.rs  workflow.rs
src/core/engine/: build.rs
src/core/schema/: metadata.rs  mod.rs  refinery.rs  targets.rs
src/core/workflow/: actions.rs  jobs.rs  mod.rs  types.rs
src/ui/: components.rs  macros.rs  mod.rs
src/ui/prompts/: binaries.rs  common.rs  install.rs  installers.rs  libraries.rs  mod.rs
src/ui/prompts/targets/: edit.rs  mod.rs  overrides.rs  setup.rs
