[package]
name = "refinery-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
indicatif = "0.18.4"
inquire = "0.9.4"
miette = { version = "7.6.0", features = ["fancy"] }
paste = "1.0.15"
reqwest = { version = "0.13.2", features = ["rustls", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml_edit = { version = "0.25.10", features = ["serde"] }

[[bin]]
name = "refinery"
path = "src/main.rs"
