[package]
name = "refinery-rs"
version = "1.0.0-rc.1"
edition = "2024"
authors = ["SirCesarium <contact.cesarmarcano@gmail.com>"]
license = "MIT"
description = "Refining Rust into universal artifacts."
repository = "https://github.com/SirCesarium/refinery-rs"

[package.metadata]

[package.metadata.deb]
name = "refinery"

[package.metadata.generate-rpm]
name = "refinery"
assets = [{ source = "target/release/refinery", dest = "/usr/bin/refinery", mode = "755" }]

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }

# CLI UI
owo-colors = { version = "4.0", optional = true }
indicatif = { version = "0.18", optional = true }
inquire = { version = "0.9", optional = true }

# Logic
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
], optional = true }
semver = { version = "1.0", optional = true }
serde_yaml = "0.9"
tempfile = "3.27"
thiserror = "2.0"
toml_edit = { version = "0.25", features = ["serde"] }

[features]
default = ["pretty-cli", "semver", "libs", "installers", "ci"]
full = ["pretty-cli", "semver", "libs", "nerd-fonts", "installers", "ci"]

# UI Features
pretty-cli = ["inquire", "dep:owo-colors", "dep:indicatif"]
nerd-fonts = []
inquire = ["dep:inquire"]

# Versioning
semver = ["dep:semver"]

# Libraries
libs = ["dyn-libs", "static-libs"]
dyn-libs = []
static-libs = []

# Packaging
installers = []

# CI
ci = ["dep:reqwest"]

[[bin]]
name = "refinery"
path = "src/main.rs"
